--- a/requirements.txt
+++ b/requirements.txt
@@ -1,262 +1,35 @@
-absl-py==1.3.0
-alabaster==0.7.8
-appdirs==1.4.3
-apturl==0.5.2
-argcomplete==3.1.1
-asttokens==2.4.0
-attrs==19.3.0
-autobahn==17.10.1
-Automat==0.8.0
-Babel==2.6.0
-backcall==0.1.0
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-blinker==1.4
-breezy==3.0.2
-Brlapi==0.7.0
-cachetools==4.2.4
-catkin-pkg==0.5.2
-catkin-pkg-modules==0.5.2
-catkin-tools==0.9.2
-cbor==1.0.0
-certifi==2022.12.7
-chardet==3.0.4
-charset-normalizer==2.0.12
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
 cmake==3.26.4
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-cupshelpers==1.0
 cupy==12.1.0
-cycler==0.11.0
-Cython==0.29.14
-dbus-python==1.2.16
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.6.0
-Deprecated==1.2.7
 distlib==0.3.0
 distro==1.4.0
-distro-info==0.23+ubuntu1.1
-docutils==0.16
-dulwich==0.19.15
-duplicity==0.8.12.0
-einops==0.4.1
-empy==3.3.2
-entrypoints==0.3
 evo==1.25.1
-executing==1.2.0
-fasteners==0.14.1
 fastimport==0.9.8
-fastrlock==0.8.1
-filelock==3.12.2
-Fiona==1.9.4.post1
-fsspec==2023.9.0
-future==0.18.2
-fvcore==0.1.5.post20221221
-gcovr==4.2
 gdown==4.7.1
-geopandas==0.13.2
 glob2==0.7
-google-auth==2.15.0
-google-auth-oauthlib==0.4.6
-gpg==1.13.1
-greenlet==0.4.15
-grpcio==1.48.2
-html5lib==1.0.1
-httplib2==0.14.0
-huggingface-hub==0.16.4
-hyperlink==19.0.0
 idna==3.4
-imageio==2.31.3
-imagesize==1.2.0
-importlib-metadata==4.8.3
-importlib-resources==5.4.0
-incremental==16.10.1
 iopath==0.1.10
 ipdb==0.13.13
 ipython==8.12.2
-ipython-genutils==0.2.0
 jedi==0.19.0
 Jinja2==3.1.2
-joblib==1.3.2
-keyring==18.0.1
-kiwisolver==1.3.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-linecache2==1.0.0
-lit==16.0.6
-lockfile==0.12.2
-loguru==0.7.1
-louis==3.12.0
-lxml==4.5.0
-lz4==3.0.2+dfsg
-macaroonbakery==1.3.1
-Mako==1.1.0
-Markdown==3.3.7
 MarkupSafe==2.1.3
 matplotlib==3.3.4
-matplotlib-inline==0.1.6
-monotonic==1.5
-more-itertools==4.2.0
-mpi4py==3.0.3
-mpmath==1.3.0
-msgpack==0.6.2
-natsort==8.4.0
-netifaces==0.10.4
-networkx==3.1
-nose==1.3.7
 numexpr==2.8.5
 numpy==1.24.4
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.2
-olefile==0.46
 opencv-contrib-python==4.8.0.76
-osrf-pycommon==2.0.2
-packaging==23.1
 pandas==1.1.5
-paramiko==2.6.0
-parso==0.8.3
-pbr==5.4.5
-pexpect==4.6.0
-pickleshare==0.7.5
 Pillow==9.0.1
-portalocker==2.6.0
-prompt-toolkit==3.0.39
-protobuf==3.19.6
-psutil==5.5.1
-pure-eval==0.2.2
-py-ubjson==0.14.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
 pycocotools==2.0.7
 pycryptodomex==3.6.1
-pycups==1.9.73
-pydot==1.4.1
-PyGithub==1.43.7
-Pygments==2.16.1
-PyGObject==3.36.0
-pygraphviz==1.5
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pynvim==0.4.1
-PyOpenGL==3.1.0
-pyOpenSSL==19.0.0
-pyparsing==3.0.9
-pypng==0.0.20
-pyproj==3.5.0
-PyQRCode==1.2.1
-PyQt5==5.14.1
-pyRFC3339==1.1
-pyserial==3.4
-PySocks==1.7.1
-python-apt==2.0.1+ubuntu0.20.4.1
-python-dateutil==2.8.2
-python-debian==0.1.36+ubuntu1.1
-python-gitlab==2.0.1
-python-gnupg==0.4.5
-python-snappy==0.5.3
-PyTrie==0.2
-pytz==2022.6
-pyxdg==0.26
 PyYAML==6.0
-reportlab==3.5.34
-requests==2.27.1
-requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-roman==2.0.0
-rosbags==0.9.16
-rosdep==0.22.2
-rosdep-modules==0.22.2
-rosdistro==0.9.0
-rosdistro-modules==0.9.0
-rosinstall-generator==0.1.23
-rospkg==1.5.0
-rospkg-modules==1.5.0
-rsa==4.9
-ruamel.yaml==0.17.32
-ruamel.yaml.clib==0.2.7
-safetensors==0.3.3
 scikit-learn==1.3.0
-scipy==1.10.1
-screen-resolution-extra==0.0.0
-seaborn==0.12.2
-SecretStorage==2.3.1
-service-identity==18.1.0
-shapely==2.0.1
-simplejson==3.18.0
-sip==4.19.21
-six==1.16.0
-sklearn==0.0.post9
-soupsieve==1.9.5
-Sphinx==1.8.5
-ssh-import-id==5.10
-stack-data==0.6.2
-stevedore==5.1.0
-sympy==1.12
-systemd-python==234
-tabulate==0.8.10
+scipy
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-termcolor==1.1.0
-testresources==2.0.0
-threadpoolctl==3.2.0
-timm==0.4.12
-tomli==2.0.1
+timm
 torch==1.13.1
-torchaudio==2.0.2
-torchvision==0.14.1
+torchaudio
+torchvision
 tqdm==4.64.1
-traceback2==1.4.0
-traitlets==5.9.0
-triton==2.0.0
-Twisted==18.9.0
-txaio==2.10.0
-typing-extensions==4.1.1
-tzdata==2023.3
-u-msgpack-python==2.1
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-unittest2==1.1.0
-urllib3==1.26.13
-usb-creator==0.3.7
-vcstools==0.1.42
-virtualenv==20.0.17
-virtualenv-clone==0.5.7
-virtualenvwrapper==4.8.4
-wadllib==1.3.3
-wcwidth==0.1.8
-webencodings==0.5.1
-Werkzeug==2.0.3
-wrapt==1.11.2
-wsaccel==0.6.2
-wstool==0.1.18
-wxPython==4.0.7
-xkit==0.0.0
-yacs==0.1.8
-zipp==3.6.0
-zope.interface==4.7.1
-zstandard==0.21.0
+
